# SurfingProject

SurfingProject/: Useful commands.txt
SurfingProject/surfing_project/: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  testing.ipynb
SurfingProject/surfing_project/surfing_project/: assets.py  definitions.py  resources.py
SurfingProject/surfing_project/surfing_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
