[project]
name = "surfing_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "pandas",
    "requests",
    "matplotlib",
    "lxml",
    "psycopg2",
    "folium",
    "selenium",
    "pillow"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "surfing_project.definitions"
project_name = "surfing_project"

[tool.setuptools.packages.find]
exclude=["surfing_project_tests"]
